--- a/090index.html
+++ b/090index.html
@@ -18,19 +18,22 @@ body {
 <div style="font-size: 35px; color: #009FFF; text-align: center">Board Game</div>
 
 <p>
-A board game in the crosswords genre.
+A board game in the crossword genre.
 
 <p>
 Showcasing Haskell and Scala game servers and a React drag and drop web UI.
 
-Currently in version 0.9 alpha trial for modern browsers on the MAC, Linux,
-and Windows platforms (not yet supported on smart phones and tablets).
+<p>
+Currently in version 0.9 alpha trial. For modern browsers on the MAC, Linux,
+and Windows platforms. Not supported on smart phones and tablets.
 
+<p>
 The board game project is intended primarily as a test bed for experimentation
 with different languages and framework for application development and
 deployment. 
 
-The rules may change over time as interesting variations are discovered with
+<p>
+The game's rules may change over time as interesting variations are discovered with
 usage.
 
 <p>
@@ -39,7 +42,7 @@ usage.
 Drag and drop letters to form a word connected to an existing tile
 on the board and click <em>Commit Play</em> to play that word. 
 
-<h2>Rules</h2>
+<h4>Rules</h4>
 
 <ul>
 <li>
@@ -58,14 +61,14 @@ A word play on a non-empty board must contain at least one existing letter.
 A word play on an empty board is unrestricted.
 
 <li>
-Tray letters are chosen randomly based on the frequency of 
-letters in words of the English language 
-(per <a href="http://www.oxfordmathcenter.com/drupal7/node/353"/>). 
+The machine generates letters for play randomly based on the frequency of 
+letters in the words of the English language 
+(per <a href="http://www.oxfordmathcenter.com/drupal7/node/353">Oxford Math Center</a>). 
 There is no notion of a container of letters getting depleted.
 
 <li>
 When no play is possible, a single letter is swapped for another.
-A game ends upon 10 consecutive swaps. 
+A game ends upon 10 consecutive no-plays [swaps]. 
 
 <li>
 Games have a time limit of 1 hour. Longer games are considered 
@@ -73,39 +76,42 @@ abandoned and are harvested.
 
 </ul>
 
-<h2>Noteworthy</h2>
+<h4>Noteworthy</h4>
 
+<p>
 You may wish to install a dictionary plugin in your browser to 
 easily search for the meanings of words played by the machine.
 
+<p>
 Make sure the status field below the the board is visible in 
-your browser.
+your browser to see messages such as unrecognized words.
 
+<p>
 The board's dimension is configurable through the URL query 
 parameter <em>dimension</em>. Valid values are odd numbers
 between 5 and 25 inclusive (default 17).
 
-The letter tray size is configurable through the URL query
+<p>
+The game's letter tray capacity is configurable through the URL query
 parameter <em>tray-capacity</em> (in the range [3 .. 15],
 default 8).
 
-<h2>Issues</h2>
+<h4>Issues</h4>
 
 On rare occasions a word you play may be missing from the game's
 dictionary. This should happen rarely enough to be tolerable.
 The dictionary is supposed to include common English words 
-(it excludes many technical terms). 
-
-Use the <a href="https://github.com/azadbolour/boardgame/issues">
-development project's issues list</a> for to report missing 
-common words and any other issues you may run into.
+(but exclude highly technical terms). 
 
 <p>
-Hosting: thanks to oceanpark.com.
-
-<p>
-Please add issues and ideas for improvment to the 
+Please add issues and ideas for improvment (including any miising common words
+in the dictionary) to the 
 <a href="https://github.com/azadbolour/boardgame/issues">issues list.</a>
+
+<h4>Hosting</h4>
+
+<p>
+Thanks to oceanpark.com.
 
 <div style="color: #009FFF; font-size: 20px">
 Bolour Computing.  
