fixed touch detection test

--- a/express-trial/__site__/static/index.html
+++ b/express-trial/__site__/static/index.html
@@ -12,7 +12,7 @@
     </script>
     <p>
     <script>
-      document.write(`has touch points: ${hasTouchPoints}, is mobile: ${isMobile}`);
+      document.write(`is touch device: ${isTouchDevice}, is mobile: ${isMobile}`);
     </script>
     <p>
     <script>
