add cache-busting hash to ui js bundle

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<!--
+  Development version of index.html.
+  Used by webpack-web-server (server.js) invoked by npm start.
+-->
 <html>
   <head>
     <title>Board Game</title>
@@ -6,6 +10,6 @@
   <body>
     <div id='root'>
     </div>
-    <script src="/static/boardgame.bundle.js"></script>
+    <script src="/static/boardgame.bundle.js" type="text/javascript"></script>
   </body>
 </html>
